<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.ui.ForgotPasswordFragment">


        <ImageView
            android:id="@+id/ills_forget_password_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_48sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:src="@drawable/ills_forget_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv1_forget_password"
            style="@style/Main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:gravity="center"
            android:text="@string/tv1_forget_password_txt"
            app:layout_constraintBottom_toTopOf="@id/tv2_forget_password_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ills_forget_password_screen" />

        <TextView
            android:id="@+id/tv2_forget_password_screen"
            style="@style/Secondary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/tv2_forget_password_txt"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/et_forget_password_email"
            app:layout_constraintEnd_toEndOf="@id/tv1_forget_password"
            app:layout_constraintStart_toStartOf="@id/tv1_forget_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_forget_password_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_80sdp"
            app:boxStrokeColor="@color/main_Color"
            app:cursorColor="@color/main_Color"
            app:hintTextColor="@color/main_Color"
            app:layout_constraintBottom_toTopOf="@id/btn_sure_forget_password"
            app:layout_constraintEnd_toEndOf="@id/tv2_forget_password_screen"
            app:layout_constraintStart_toStartOf="@id/tv2_forget_password_screen">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_focuse_unfocuse"
                android:drawablePadding="@dimen/_8sdp"
                android:hint="@string/email_auth_login_txt"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_16sdp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_sure_forget_password"
            style="@style/Text_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:background="@drawable/third_screen_btn"
            android:elevation="8dp"
            android:text="@string/btn_third_screen_txt"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
