<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".onboarding.ThirdOnboardingScreenFragment">


<!--        <ImageView-->
<!--            android:id="@+id/ills_third_screen"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="@dimen/_8sdp"-->
<!--            android:layout_marginTop="@dimen/_48sdp"-->
<!--            android:layout_marginEnd="@dimen/_8sdp"-->
<!--            android:src="@drawable/ills_third_onboarding_screen"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <TextView
            android:id="@+id/tv1_third_screen"
            style="@style/Main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:gravity="center"
            android:text="@string/tv1_third_screen_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv2_third_screen"/>
<!--            app:layout_constraintTop_toBottomOf="@+id/ills_third_screen" />-->

        <TextView
            android:id="@+id/tv2_third_screen"
            style="@style/Secondary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/tv2_third_screen_txt"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/tv1_third_screen"
            app:layout_constraintStart_toStartOf="@id/tv1_third_screen"
            app:layout_constraintTop_toBottomOf="@+id/tv1_third_screen" />


        <Button
            android:id="@+id/btn_start_now"
            style="@style/Text_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_48sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:background="@drawable/third_screen_btn"
            android:elevation="8dp"
            android:text="@string/btn_third_screen_txt"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv2_third_screen" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
